Closed
Bug 226230
Opened 22 years ago
Closed 22 years ago
[FIX]Ha'aretz home page downloads ads as Excel files!
Categories
(Core :: Networking, defect, P1)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: dtoub, Assigned: bzbarsky)
References
()
Details
Attachments
(1 file)
|
1.03 KB,
patch
|
Biesinger
:
review+
darin.moz
:
superreview+
brendan
:
approval1.6b+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-us) AppleWebKit/103u (KHTML, like Gecko) Safari/100
Build Identifier:
New with the 10/19 build, if I navigate to http://www.haaretzdaily.com/, a bunch of excel files
suddenly download to my desktop, which seem to be ads. This behavior was seen in early betas of
Safari, and has never been seen before with Camino.
Reproducible: Always
Steps to Reproduce:
1.Go to http://www.haaretzdaily.com/
2.
3.
Actual Results:
Several files download to my computer, which are interpreted as Excel files, representing ads from
that page. If I leave the browser open for several minutes to the Haaretz home page, the same
thing happens again.
Expected Results:
Download nothing, just load the page and that's it
Comment 1•22 years ago
|
||
yuck. dagley, what did you do to the auto d/l code that would cause this?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•22 years ago
|
||
David, When you say "New with the 10/19 build" do you mean the 10/18 build
didn't exhibit this problem?
I don't see it in the Camino 0.7 build so it could be something that didn't get
moved from the Camino branch to the trunk. Does the download window show an
entry for each item downloaded or do the files get downloaded with no indication
from the UI? I'm guessing that the files downloaded are images have an
incorrect mime type making us think they've got to be downloaded rather than
being displayed on the page.
Comment 3•22 years ago
|
||
they're going through the d/l window
| Reporter | ||
Comment 4•22 years ago
|
||
Also happens with the latest Firebird nightly (it did not do this with the 11/13 build), so I strongly
suspect it is something with the trunk that happened either on 11/18 or 11/19 as this behavior
was not in Camino's 11/14 build. I had not tested 11/18.
| Assignee | ||
Comment 5•22 years ago
|
||
There've been a few file-handling changes recently, but they should not have had
this sort of effect...
Comment 6•22 years ago
|
||
so, er, has this started in the 10/19 build as stated in comment 0 or in 11/19
as stated in comment 4?
that said, I can confirm that mozilla brings up the helper app dialog. it shows
a content type of octet-stream.
And apparently rightly so:
0[244608]: Found extension '' (filename is
'site=haaretz&adsize=120x60&hposition=30&hlayer1=hp&hlang=ENG', handling
attachment: false)
0[244608]: HelperAppService::DoContent: mime 'application/octet-stream',
extension ''
Comment 7•22 years ago
|
||
(my testing was done with nightly 2003111908 on win2k)
| Assignee | ||
Comment 8•22 years ago
|
||
To further narrow the range, my CVS build from "Sun Nov 16 16:03:17 CST 2003"
brings up the helper app dialog, while a 2003-11-10-05 nightly does not.
I'm going to see whether I can locate some builds covering that range. Damn
this "no nightlies" crap with ftp.mozilla.org. :(
Comment 9•22 years ago
|
||
bz: maybe try backing out the bug 78919 patch... that's the first patch that
comes to mind in this area that was checked in recently...
the other uriloader changes were win-only except bug 223990 which I find very
unlikely.
oh wait
when was your checkin to detect low characters (0-32 or so) as octet-stream, was
that in this timerange/is it in your tree?
Comment 10•22 years ago
|
||
(the checkin for that detection I mentioned was 11/18/2003 07:10 PST, bug 126782)
| Assignee | ||
Comment 11•22 years ago
|
||
Yes, i's in my tree... That could very well be it. I'll test.
| Assignee | ||
Comment 12•22 years ago
|
||
Doesn't seem to be it.... I'm converting some tinderbox builds into tarballs so
I can just run a regression lookup...
Comment 13•22 years ago
|
||
>Doesn't seem to be it....
that is interesting. my testing has just shown that that _is_ it.
| Assignee | ||
Comment 14•22 years ago
|
||
Oh, doh. I'm incapable of backing out my own patches, apparently... ;)
I'll take a look at what sort of garbage they're sending...
| Assignee | ||
Comment 15•22 years ago
|
||
This is so mine.
Assignee: pinkerton → bz-vacation
Component: General → Networking
Priority: -- → P1
Product: Camino → Browser
Version: unspecified → Trunk
| Assignee | ||
Comment 16•22 years ago
|
||
This should really not end up in beta... I made a dumb mistake. :(
Flags: blocking1.6b?
OS: MacOS X → All
Hardware: Macintosh → All
Summary: Ha'aretz home page downloads ads as Excel files! → [FIX]Ha'aretz home page downloads ads as Excel files!
Target Milestone: --- → mozilla1.6beta
| Assignee | ||
Comment 17•22 years ago
|
||
Mental note. (32 & 31 != 32) evaluates to 0, since != has higher precedence
than &.
| Assignee | ||
Comment 18•22 years ago
|
||
Comment on attachment 135957 [details] [diff] [review]
Patch. I need to look at that page in K&R more. :(
Could I have some review love here?
Attachment #135957 -
Flags: superreview?(darin)
Attachment #135957 -
Flags: review?(cbiesinger)
Updated•22 years ago
|
Attachment #135957 -
Flags: review?(cbiesinger) → review+
| Assignee | ||
Comment 19•22 years ago
|
||
Oh, the "garbage" is a space char, of course...
| Reporter | ||
Comment 20•22 years ago
|
||
Oops, I meant 11/19 rather than 10/19. Forgot what month we're in...
Comment 21•22 years ago
|
||
Comment on attachment 135957 [details] [diff] [review]
Patch. I need to look at that page in K&R more. :(
whoops... i should have caught that :-/
sr=darin
Attachment #135957 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 22•22 years ago
|
||
Comment on attachment 135957 [details] [diff] [review]
Patch. I need to look at that page in K&R more. :(
Could this please be approved for 1.6b? This fixes a silly C coding error...
:(
Attachment #135957 -
Flags: approval1.6b?
Comment 23•22 years ago
|
||
Comment on attachment 135957 [details] [diff] [review]
Patch. I need to look at that page in K&R more. :(
gcc should warn -- does it?
/be
Attachment #135957 -
Flags: approval1.6b? → approval1.6b+
| Assignee | ||
Comment 24•22 years ago
|
||
It does not.
Checked in for 1.6b.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Flags: blocking1.6b?
You need to log in
before you can comment on or make changes to this bug.
Description
•