Fix silly operator precedence error.  Bug 226230, r=biesi, sr=darin, a=brendan